--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^8.0.1",
     "react-scripts": "4.0.1",
+    "redux": "^4.2.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
